--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "lib-flexible": "^0.3.2",
+    "path": "^0.12.7",
     "postcss-px2rem": "^0.3.0",
     "px2rem": "^0.5.0",
     "vue": "^2.6.11",
